# yry-pro

./: 2  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  r  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: tauri-build.yml
scripts/: release.sh  sync-version.cjs
src/: App.vue  auto-imports.d.ts  main.ts  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json  vocabulary.db-shm  vocabulary.db-wal
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/util/: database.rs  mod.rs  path.rs  special_tools.rs
src/assets/css/: styles.css
src/components/: ImageUploader.vue  LogViewer.vue  LuckyWheel.vue  LuckyWheelExport.ts  Sidebar.vue  SoundUploader.vue  VocabularyManager.vue  WheelSettings.vue  WindowHeader.vue  WinnerModal.vue
src/pages/: EnglishWordLottery.vue  Home.vue  Profile.vue  Results.vue  Settings.vue
src/styles/: luckyWheel.css
src/utils/: luckyWheelLogic.d.ts  luckyWheelLogic.ts  wheelSettings.ts  wheelUtils.d.ts  wheelUtils.ts
src/views/: LuckyWheelDemo.vue
